--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="container-fluid">
     <div class="row">
 
-        <div class="col-md-4 main">
+        <div class="col-sm-4 main">
 
             <h1 class="page-header">Dataviz - l'histoire de l'essence en France</h1>
 
@@ -83,7 +83,7 @@
 
         </div>
 
-        <div id="map" class="col-sm-6 col-md-8 sidebar">
+        <div id="map" class="col-md-8 sidebar">
 
         </div>
 
