--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         </div>
 
-        <div id="map" class="col-md-8 sidebar">
+        <div id="map" class="col-sm-8 sidebar">
 
         </div>
 
